Fix UVweb description alignment and try to improve projec separation

--- a/static/css/design.css
+++ b/static/css/design.css
@@ -144,13 +144,14 @@ aside h3, aside h4 {
 .project {
     padding-top: 20px;
     padding-bottom: 20px;
-    border-top: 3px solid #3CB9C6;
     margin-top: 40px;
     height: auto;
 }
 
 .project h1 {
     margin-bottom: 30px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #3CB9C6;
 }
 
 .project aside {
